# picman

./: Cargo.toml  README.md
src/: duplication.rs  entry.rs  logger.rs  main.rs  pathfilter.rs  utils.rs
src/path/: mod.rs  pathfilter.rs  pathloader.rs  paths.rs
src/tests/: entry.rs  mod.rs
