[package]
name = "picman"
version = "0.1.0"
authors = ["Lewis Gunsch <lgunsch@gmail.com>"]
repository = "https://github.com/lgunsch/picman"

[features]
default = []

[dependencies]
clippy = {version = "*", optional = true}
docopt = "0.7.0"
log = "~0"
regex = "~0"
rust-crypto = "~0"
rustc-serialize = "~0"
walker = "^1.0.0"
hamcrest = "0.1.5"
